# enterprise-python-backup

./: .copilot-file-rules.sh  .copilot-rules.md  .copilot-strict-enforcement.md  .copilot-strict-rules.md  .gitignore  .gitleaksignore  COMMIT_MESSAGE.txt  COMMIT_SESSION_2026-01-30.txt  README.md  enterprise-vya-backupdb.code-workspace  pyproject.toml
.github/agents/: copilot-instructions.md
.mcp-status/: last-activation
.secrets/: .gitignore  README.md
.specify/memory/: constitution.md  specify.md
config/: cenario.yaml  config.example copy.yaml  config.example.yaml  test-config.yaml
docs/: CONFIG_RETENTION.md  CREDENTIAL_ROTATION_GUIDE.md  DISASTER_RECOVERY_ANALYSIS_2026-01-30.md  INDEX.md  LOG_SANITIZER_IMPLEMENTATION.md  PRODUCTION_READINESS_PLAN_2026-01-13.md  Postgres Backup Completo Metodos.md  Postgres erro no restore.md  ROADMAP_v2.1.0.md  SECURITY_AUDIT_2026-01-15.md  TASK_LIST_V2.0.0.md  TODAY_ACTIVITIES_2026-01-09.md  TODAY_ACTIVITIES_2026-01-12.md  TODAY_ACTIVITIES_2026-01-13.md  TODAY_ACTIVITIES_2026-01-14.md  TODO.md  crontab_example.txt  tree_old_version.txt
docs/architecture/: CONFIGURATION_ARCHITECTURE.md
docs/features/: VAULT_BATCH_IMPORT_FEATURE.md
docs/guides/: DISASTER_RECOVERY_SIMULATION.md  FILES_BACKUP_GUIDE.md  Python code pattern.md  QUICK_SETUP_GUIDE.md  SECRETS_DIRECTORY_GUIDE.md  VAULT_BATCH_IMPORT_GUIDE.md  VAULT_CONFIG_INTEGRATION.md  VAULT_SYSTEM_GUIDE.md
docs/legacy/: RESUMO_SESSAO.md  SESSAO_COMPLETA.md  SESSAO_RECUPERADA.md
docs/security/: GIT_HISTORY_CLEANUP_REPORT_2026-01-30.md  SECURITY_FIX_REPORT_2026-01-30.md  gitleaks-report-clean.json  gitleaks-report.json
docs/sessions/: FINAL_STATUS_2026-01-09.md  FINAL_STATUS_2026-01-12.md  FINAL_STATUS_2026-01-13.md  FINAL_STATUS_2026-01-14.md  FINAL_STATUS_2026-01-15.md  FINAL_STATUS_2026-01-26.md  GIT_HISTORY_CLEANUP_REPORT_2026-01-15.md  SESSION_CLOSURE_2026-01-09.md  SESSION_CLOSURE_2026-01-13.md  SESSION_RECOVERY_2026-01-09.md  SESSION_RECOVERY_2026-01-12.md  SESSION_RECOVERY_2026-01-13.md  SESSION_RECOVERY_2026-01-14.md  SESSION_RECOVERY_2026-01-15.md  SESSION_REPORT_2026-01-09.md  SESSION_REPORT_2026-01-12.md  SESSION_REPORT_2026-01-13.md  SESSION_REPORT_2026-01-14.md  SESSION_REPORT_2026-01-26.md  SESSION_START_SUMMARY_2026-01-13.txt  T-SECURITY-002_EXECUTION_REPORT_PHASE1.md  TASK_LIST_FILE_BACKUP_2026-01-14.md  TODAY_ACTIVITIES_2026-01-09.md  TODAY_ACTIVITIES_2026-01-12.md  TODAY_ACTIVITIES_2026-01-14.md  TODAY_ACTIVITIES_2026-01-26.md
docs/technical/: DATABASE_FILTERING_SPECIFICATION.md  ERROR_REPORT_2026-01-12_postgresql_auth.md  ERROR_REPORT_2026-01-12_psycopg.md  PRODUCTION_BACKUP_PROCESS.md  ROOT_CAUSE_ANALYSIS_postgresql_auth_2026-01-12.md  TEST_DATA_GENERATION_SUMMARY_2026-01-12.md  VERSION_COMPARISON.md
docs/troubleshooting/: CLI_IMPORT_ERROR.md
docs/workspace-templates/: model-code-workspace.json
enterprise_backup/n8n/: __init__.py  backup.py  cli.py  docker_manager.py  exceptions.py  models.py  restore.py  storage.py  utils.py  validators.py
examples/: credentials_import.json  credentials_template.md
examples/configurations/: files_backup_example.json  journey-test-usage.md  monitoring_example.yaml
scripts/: cleanup-git-history-v2.sh  cleanup-git-history.sh  commit-with-message.sh  rename_project.sh  reorganizar_projetos.sh  verificar_reorganizacao.sh  visualizar_reorganizacao.sh  vya_backupdb.sh
scripts/utils/: git-commit-from-file.sh  migrate_to_vault.py  test_email_failure.py  test_scheduler.py
specs/001-phase2-core-development/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/python_backup/: __init__.py  __main__.py  cli.py
tests/: conftest.py  generate_test_data.py
tmp/: .env.example  INSTRUCOES.md  docker-compose.yaml  docker_entry.sh  files-to-remove.txt  init-reset-password.sh  reset-password.sh  reset-postgres-password.sh
(+155 files in other folders)
